# typf

./: .cursorrules  .dockerignore  .editorconfig  .gitignore  07638-typf.md  0PLAN.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CLEANUP.md  CLI_MIGRATION.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  Dockerfile  FEATURES.md  GEMINI.md  IMPROVE--typf.md  LICENSE  LICENSE-APACHE  LLXPRT.md  NEXTTASK.md  PLAN.md  PLAN2.md  QUICKSTART.md  QWEN.md  README copy.md  README.md  README2.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v2.0.0.md  RELEASING.md  REVIEW.md  REVIEW.md.backup  REVIEW.md.comprehensive  SECURITY.md  TASKS.md  TODO.md  (+32 more)
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.omc/: project-memory.json
.sisyphus/: ralph-loop.local.md
.swarm/: context.md  dark-matter.md  doc-manifest.json  knowledge.jsonl  telemetry.jsonl
PLAN/: 01.md  02.md  03.md  05.md  06.md  08.md  09.md
PLANSTEPS/: 01-rendering-quality-status.md  02-external-ecosystems.md  03-api-extension-typf-core.md  04-api-extension-typfpy.md  05-integration-recipes.md  06-color-font-integration.md  07-architecture-thesis.md  08-rust-ecosystem-integration.md  09-python-ecosystem-and-api-amendments.md
backend_benches/: Cargo.toml
backends/typf-core/: Cargo.toml
backends/typf-core/src/: backend_trait.rs  cache.rs  error.rs  lib.rs  surface.rs  traits.rs  types.rs  utils.rs
backends/typf-icu-hb/: Cargo.toml
backends/typf-icu-hb/benches/: backend_comparison.rs
backends/typf-icu-hb/src/: lib.rs  renderer.rs  shaping.rs
backends/typf-mac/: Cargo.toml
backends/typf-mac/src/: lib.rs
backends/typf-orge/: ALLOCATION.md  Cargo.toml  README.md
backends/typf-orge/benches/: edge_allocation.rs  simd_grayscale.rs
backends/typf-orge/src/: fixed.rs  grayscale.rs  lib.rs  renderer.rs  scan_converter.rs
backends/typf-orge/tests/: integration_test.rs
backends/typf-os/: Cargo.toml
backends/typf-os-mac/: Cargo.toml
backends/typf-os-mac/src/: lib.rs
backends/typf-os-win/: Cargo.toml
backends/typf-os-win/src/: lib.rs
backends/typf-os/src/: lib.rs
backends/typf-render-cg/: Cargo.toml
backends/typf-render-cg/src/: lib.rs
backends/typf-render-color/: Cargo.toml
backends/typf-render-color/examples/: render_emoji.rs  svg_flip_test.rs  svg_size_debug.rs
backends/typf-render-color/src/: bitmap.rs  lib.rs  svg.rs
backends/typf-render-json/: Cargo.toml
backends/typf-render-json/src/: lib.rs
backends/typf-render-opixa/: Cargo.toml  TODO.md
backends/typf-render-opixa/examples/: profile.rs
backends/typf-render-opixa/src/: curves.rs  edge.rs  fixed.rs  glyph_cache.rs  grayscale.rs  lib.rs  rasterizer.rs  scan_converter.rs  simd.rs
backends/typf-render-opixa/tests/: integration.rs
backends/typf-render-orge/: Cargo.toml  TODO.md
backends/typf-render-orge/examples/: profile.rs
backends/typf-render-orge/src/: curves.rs  edge.rs  fixed.rs  grayscale.rs  lib.rs  parallel.rs  rasterizer.rs  scan_converter.rs  simd.rs
backends/typf-render-skia/: Cargo.toml
backends/typf-render-skia/src/: lib.rs
backends/typf-render-skia/tests/: integration.rs
backends/typf-render-svg/: Cargo.toml
backends/typf-render-svg/src/: lib.rs
backends/typf-render-svg/tests/: integration.rs
backends/typf-render-vello/: Cargo.toml
backends/typf-render-vello-cpu/: Cargo.toml
backends/typf-render-vello-cpu/src/: lib.rs
backends/typf-render-vello-cpu/tests/: integration.rs
backends/typf-render-vello/src/: lib.rs
backends/typf-render-vello/tests/: integration.rs
backends/typf-render-zeno/: Cargo.toml
backends/typf-render-zeno/src/: lib.rs
backends/typf-render-zeno/tests/: integration.rs
backends/typf-shape-ct/: Cargo.toml
backends/typf-shape-ct/src/: lib.rs
backends/typf-shape-hb/: Cargo.toml
backends/typf-shape-hb/src/: cache.rs  lib.rs
backends/typf-shape-hb/tests/: golden_tests.rs
backends/typf-shape-hb/tests/golden/: empty_text.txt  numbers.txt  punctuation.txt  simple_latin.txt  single_char.txt
backends/typf-shape-hr/: Cargo.toml
backends/typf-shape-hr/src/: lib.rs
backends/typf-shape-icu-hb/: Cargo.toml
backends/typf-shape-icu-hb/src/: cache.rs  lib.rs
backends/typf-shape-none/: Cargo.toml
backends/typf-shape-none/src/: lib.rs
benches/: comprehensive.rs  pipeline_bench.rs
cli/: Cargo.toml
docs/: 404.html  API-STABILITY.md  FFI_SAFETY.md  INDEX.md  MEMORY.md  PERFORMANCE.md  index.html  search.json  sitemap.xml
examples/: README.md  all_formats.rs  backend_comparison.rs  basic.rs  basic_render.py  convert_to_png.py  direct_orge_single_glyph.rs  external_layout_integration.rs  formats.rs  full_text_icu_hb_orge.rs  harfbuzz.rs  long_text_handling.rs  output.ppm  pipeline.rs  quickstart_backends.rs  svg_export_example.rs  test_png_output.py  variable_fonts.rs  wgpu_mesh_upload.rs
export/: Cargo.toml
export-svg/: Cargo.toml
export-svg/src/: lib.rs
export/src/: svg.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_font_parse.rs  fuzz_harfbuzz_shape.rs  fuzz_pipeline.rs  fuzz_unicode_process.rs
input/: Cargo.toml
issues/: 101.md  102.md  103.md  104.md  200.md  201-renders.md  202-renders.md  203-renders.md  301.md  302.md
main/: Cargo.toml
python/: Cargo.toml
python/src/: lib.rs
python/tests/: test_api.py  test_integration.py
python/typf/: __init__.py
scripts/: bench-compare.sh  bench.sh  build-wasm.sh  build.sh  count-tests.sh  fuzz.sh  generate_docs.sh  profile-memory.sh  publish.sh  set-version.sh  test.sh
simple_font_rendering_py/: __init__.py  base.py  constants.py  coretextpy.py  harfbuzzpy.py
src_docs/: 01-introduction.md  02-quick-start.md  03-architecture-overview.md  04-installation.md  05-six-stage-pipeline.md  06-backend-architecture.md  07-memory-management.md  08-performance-fundamentals.md  09-harfbuzz-shaping.md  10-platform-shapers.md  11-icu-harfbuzz-composition.md  12-none-shaper.md  13-skia-renderer.md  14-opixa-renderer.md  14-orge-renderer.md  15-platform-renderers.md  INDEX.md  (+23 more)
typf-cli/: Cargo.toml
typf-cli/src/: main.rs
unicode/: Cargo.toml
unicode/src/: tests.rs
(+319 files in other folders)
