[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
  "backends/typf-os",
  # "backends/typf-render-mac",    # Same as cg
  # "backends/typf-render-win",    # Windows Direct2D (needs Windows)
  # Linra OS backends (single-pass shaping+rendering)
  "backends/typf-os-mac",
  "backends/typf-os-win",
  "backends/typf-render-cg",
  "backends/typf-render-color",
  # "backends/typf-shape-mac",     # Same as ct
  # "backends/typf-shape-win",     # Windows DirectWrite (needs Windows)
  # Rendering backends
  "backends/typf-render-json",
  "backends/typf-render-opixa",
  "backends/typf-render-skia",
  "backends/typf-render-svg",
  "backends/typf-render-zeno",
  "backends/typf-shape-ct",
  "backends/typf-shape-hb",
  "backends/typf-shape-icu-hb",
  # Shaping backends
  "backends/typf-shape-none",
  # Bindings
  "bindings/python",
  # Core crates
  "crates/typf",
  "crates/typf-bench",
  # CLI
  "crates/typf-cli",
  "crates/typf-core",
  "crates/typf-export",
  "crates/typf-export-svg",
  "crates/typf-fontdb",
  "crates/typf-input",
  "crates/typf-unicode",
]

[workspace.package]
version = "2.0.0"
authors = ["Typf Contributors"]
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/fontlaborg/typf"
license = "EVALUATION LICENSE"

[workspace.dependencies]
anyhow = "1.0"
env_logger = "0.11"
flate2 = "1.0"
# Shaping dependencies
harfbuzz_rs = "2.0"
# ICU dependencies (for icu-hb shaping)
icu = "2.1"
icu_properties = "2.1"
icu_segmenter = "2.1"
kurbo = "0.11"
log = "0.4"
lru = "0.16"
# Caching and concurrency
parking_lot = "0.12"
# Bitmap glyph rendering (PNG decode)
png = "0.17"
rayon = "1.10"
# External dependencies
read-fonts = "0.36"
# SVG glyph rendering
resvg = "0.45"
skrifa = "0.39"
thiserror = "2.0"
# Rendering dependencies
tiny-skia = "0.11"
# Internal crates
typf = { path = "crates/typf" }
typf-bench = { path = "crates/typf-bench" }
typf-core = { path = "crates/typf-core" }
typf-export = { path = "crates/typf-export" }
typf-fontdb = { path = "crates/typf-fontdb" }
typf-input = { path = "crates/typf-input" }
typf-os = { path = "backends/typf-os" }
# Linra OS backends
typf-os-mac = { path = "backends/typf-os-mac" }
typf-os-win = { path = "backends/typf-os-win" }
typf-render-cg = { path = "backends/typf-render-cg" }
typf-render-color = { path = "backends/typf-render-color" }
# Rendering backends
typf-render-json = { path = "backends/typf-render-json" }
typf-render-opixa = { path = "backends/typf-render-opixa" }
typf-render-skia = { path = "backends/typf-render-skia" }
typf-render-svg = { path = "backends/typf-render-svg" }
typf-render-zeno = { path = "backends/typf-render-zeno" }
typf-shape-ct = { path = "backends/typf-shape-ct" }
typf-shape-hb = { path = "backends/typf-shape-hb" }
typf-shape-icu-hb = { path = "backends/typf-shape-icu-hb" }
# Shaping backends
typf-shape-none = { path = "backends/typf-shape-none" }
typf-unicode = { path = "crates/typf-unicode" }
usvg = "0.45"
zeno = "0.3"

# Feature flags for the workspace
# These are referenced by individual crates
[workspace.metadata.features]
# Minimal build with no external dependencies
minimal = ["shaping-none", "render-opixa", "export-pnm"]
# Default build with common features
default = ["minimal", "unicode", "fontdb"]
# Full build with all features
full = [
  "default",
  "shaping-hb",
  "shaping-icu-hb",
  "render-skia",
  "render-zeno",
  "export-png",
  "export-svg",
  "export-pdf",
  "simd",
  "parallel",
]
# Shaping backends
shaping-none = []
shaping-hb = []
shaping-icu-hb = ["shaping-hb"]
shaping-mac = []
shaping-win = []
# Rendering backends
render-opixa = []
render-skia = []
render-zeno = []
render-mac = []
render-win = []
# Export formats
export-pnm = []
export-png = []
export-svg = []
export-pdf = []
export-json = []
# Optional features
unicode = []
fontdb = []
simd = []
parallel = []
# Platform-specific auto-selection
auto-backend = []

[profile.bench]
inherits = "release"
lto = false

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[profile.minimal]
inherits = "release"
opt-level = "z"  # Optimize for size

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
