[package]
name = "typf-export"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Export formats (PNG, PNM, raw pixels) for Typf"

[dependencies]
typf-core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[dev-dependencies]
