[package]
name = "typf-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the TYPF font rendering engine"

[[bin]]
name = "typf"
path = "src/main.rs"

[dependencies]
typf-core = { path = "../backends/typf-core" }
typf-icu-hb = { path = "../backends/typf-icu-hb", features = ["zeno-traits"] }
typf-zeno = { path = "../backends/typf-zeno" }
typf-batch = { path = "../crates/typf-batch" }
typf-fontdb = { path = "../crates/typf-fontdb" }
typf-render = { path = "../crates/typf-render" }
clap = { version = "4.5", features = ["derive"] }
serde_json.workspace = true
camino.workspace = true
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
rayon.workspace = true
base64 = "0.22"
png.workspace = true
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
typf-mac = { path = "../backends/typf-mac" }

[target.'cfg(windows)'.dependencies]
typf-win = { path = "../backends/typf-win" }
