[package]
name = "typf-unicode"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
typf-core = { workspace = true }
icu_segmenter = { workspace = true }
icu_properties = { workspace = true }
unicode-bidi = "0.3"
unicode-normalization = "0.1"

[dev-dependencies]
proptest = "1.4"
