[package]
name = "typf-icu-hb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ICU+HarfBuzz backend for typf text rendering"

[features]
default = ["orge"]
orge = ["typf-orge"]
tiny-skia-renderer = []
zeno-traits = ["typf-zeno"]

[dependencies]
typf-core = { path = "../typf-core" }
typf-render = { path = "../../crates/typf-render" }
typf-unicode = { path = "../../crates/typf-unicode" }
typf-fontdb = { path = "../../crates/typf-fontdb" }
typf-orge = { path = "../typf-orge", optional = true }
typf-zeno = { path = "../typf-zeno", optional = true }
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
parking_lot.workspace = true
lru.workspace = true

# Text processing
harfbuzz_rs = "2.0"

# Font handling - migrated to skrifa
skrifa = "0.39"
read-fonts = "0.36"

# Rendering - tiny-skia is always required for final image compositing
# The tiny-skia-renderer feature controls whether it's ALSO used for glyph rasterization
tiny-skia = "0.11"
png.workspace = true
resvg = "0.45"
usvg = "0.45"
kurbo = "0.11"

[dev-dependencies]
env_logger = "0.11"
serde.workspace = true
serde_json.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "backend_comparison"
harness = false
