[package]
name = "typf-mac"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CoreText backend for typf text rendering"

[dependencies]
typf-core = { path = "../typf-core" }
typf-render = { path = "../../crates/typf-render" }
typf-unicode = { path = "../../crates/typf-unicode" }
typf-fontdb = { path = "../../crates/typf-fontdb" }
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
parking_lot.workspace = true
lru.workspace = true
camino.workspace = true

# Image encoding
png.workspace = true

# macOS-specific dependencies
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSAttributedString", "NSArray", "NSDictionary", "NSValue"] }
objc2-app-kit = { version = "0.2", features = ["NSFont", "NSColor"] }
core-foundation = "0.9"  # Match core-text version
core-text = "20.1"
core-graphics = "0.23"  # Match core-text version

[dev-dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
# Only compile on macOS
