[package]
name = "typf-orge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skrifa.workspace = true
read-fonts.workspace = true
thiserror.workspace = true
kurbo = { workspace = true }
typf-core = { path = "../typf-core" }
typf-fontdb = { path = "../../crates/typf-fontdb" }

parking_lot = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "edge_allocation"
harness = false
