[package]
name = "typf-os-mac"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-pass text rendering using macOS CoreText"
keywords = ["font", "text", "rendering", "coretext", "macos"]
categories = ["graphics", "text-processing"]

[dependencies]
typf-core = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
core-text = "21"
foreign-types = "0.5"

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
