[package]
name = "typf-os-mac"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-pass text rendering using macOS CoreText"
keywords = ["font", "text", "rendering", "coretext", "macos"]
categories = ["graphics", "text-processing"]

[dependencies]
typf-core = { workspace = true }
log = { workspace = true }
lru = { workspace = true }

# macOS-specific dependencies (objc2 ecosystem)
[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { workspace = true }
objc2-core-graphics = { workspace = true }
objc2-core-text = { workspace = true }

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
