[package]
name = "typf-os"
version.workspace = true
edition.workspace = true
description = "Platform-native linra text rendering dispatcher"
license.workspace = true
repository.workspace = true
keywords = ["font", "text", "rendering", "platform"]
categories = ["graphics", "text-processing"]

[dependencies]
typf-core = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
typf-os-mac = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
typf-os-win = { workspace = true }

[features]
default = []
