[package]
name = "typf-render-cg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "CoreGraphics rendering backend for TYPF"

[dependencies]
typf-core = { workspace = true }
log = { workspace = true }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-text = "21.0"
core-graphics = "0.24"
foreign-types = "0.5"

[dev-dependencies]
env_logger = "0.11"
