[package]
name = "typf-render-cg"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CoreGraphics rendering backend for Typf"
license.workspace = true

[dependencies]
log = { workspace = true }
typf-core = { workspace = true }

[dev-dependencies]
env_logger = "0.11"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
core-text = "21.0"
foreign-types = "0.5"
