[package]
name = "typf-render-cg"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CoreGraphics rendering backend for Typf"
license.workspace = true

[dependencies]
log = { workspace = true }
typf-core = { workspace = true }

[dev-dependencies]
env_logger = "0.11"

# macOS-specific dependencies (objc2 ecosystem)
[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { workspace = true }
objc2-core-graphics = { workspace = true }
objc2-core-text = { workspace = true }
