[package]
name = "typf-render-color"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Color glyph renderer for TYPF (COLR v0/v1, SVG, sbix/CBDT bitmap)"
keywords = ["font", "color", "emoji", "opentype", "colr"]
categories = ["graphics", "rendering", "text-processing"]

[features]
default = ["colr"]
# COLR v0/v1 layered color glyphs with gradients and compositing
colr = []
# SVG table glyph rendering via resvg (handles gzip compression)
svg = ["dep:resvg", "dep:usvg", "dep:flate2"]
# Bitmap glyph support for sbix (Apple) and CBDT/CBLC (Google) tables
bitmap = ["dep:png"]

[dependencies]
typf-core = { workspace = true }
skrifa = { workspace = true }
tiny-skia = { workspace = true }
log = { workspace = true }

# SVG glyph support (optional)
resvg = { workspace = true, optional = true }
usvg = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }

# Bitmap glyph support (optional)
png = { workspace = true, optional = true }
