[package]
name = "typf-render-color"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Color glyph renderer for Typf (COLR v0/v1, SVG, sbix/CBDT bitmap)"
repository.workspace = true
license.workspace = true
keywords = ["color", "colr", "emoji", "font", "opentype"]
categories = ["graphics", "rendering", "text-processing"]

[dependencies]
flate2 = { workspace = true, optional = true }
log = { workspace = true }
# Bitmap glyph support (optional)
png = { workspace = true, optional = true }
# SVG glyph support (optional)
resvg = { workspace = true, optional = true }
skrifa = { workspace = true }
tiny-skia = { workspace = true }
typf-core = { workspace = true }
usvg = { workspace = true, optional = true }

[features]
default = ["colr"]
# Bitmap glyph support for sbix (Apple) and CBDT/CBLC (Google) tables
bitmap = ["dep:png"]
# COLR v0/v1 layered color glyphs with gradients and compositing
colr = []
# SVG table glyph rendering via resvg (handles gzip compression)
svg = ["dep:flate2", "dep:resvg", "dep:usvg"]
