[package]
name = "typf-render-json"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON output renderer for TYPF (HarfBuzz-compatible format)"

[dependencies]
typf-core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
