[package]
name = "typf-render-json"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "JSON output renderer for Typf (HarfBuzz-compatible format)"
repository.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
typf-core = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
