[package]
name = "typf-render-opixa"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust rendering backend using Opixa rasterizer"
repository.workspace = true

[dependencies]
typf-core = { workspace = true }
log = { workspace = true }
rayon = { version = "1.8", optional = true }
read-fonts = { workspace = true }
skrifa = { workspace = true }

[features]
default = []
parallel = ["rayon"]