[package]
name = "typf-render-skia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Skia rendering backend for TYPF"

[dependencies]
typf-core = { workspace = true }
tiny-skia = "0.11"
kurbo = "0.11"
skrifa = "0.39"
read-fonts = "0.36"
thiserror.workspace = true
log.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
