[package]
name = "typf-render-skia"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Skia rendering backend for Typf"
repository.workspace = true
license.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
kurbo = "0.11"
log.workspace = true
read-fonts = "0.36"
skrifa = "0.39"
thiserror.workspace = true
tiny-skia = "0.11"
typf-core = { workspace = true }
typf-render-svg = { workspace = true }

[dev-dependencies]
typf-fontdb = { workspace = true }
