[package]
name = "typf-render-svg"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "SVG vector renderer for Typf - extracts glyph outlines as SVG paths"
repository.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
skrifa = { workspace = true }
typf-core = { workspace = true }
typf-export = { workspace = true }
typf-render-color = { workspace = true, features = ["bitmap", "svg"] }

[dev-dependencies]
typf-fontdb = { workspace = true }
